poulet projectile fonctionnel (parent animal)